--- a/main.ipynb
+++ b/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,12 +99,15 @@
    "source": [
     "In the next cell I initialize the model class and save it in the variable \"model\", then \n",
     "I set the model in the main class (see ML_GRB.py). \n",
-    "After that I train the model with the function Run (see functions.py)"
+    "After that I train the model with the function Run (see functions.py).\n",
+    "\n",
+    "I had set a random_state of 42 to split training and testing data in the same way every time \n",
+    "I run the code, just to hate always the same results in this first \"code testing\" moment."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +116,8 @@
     "obj.SetModel(model)     # Setting the model in the main class\n",
     "\n",
     "# Fitting the model ---> see functions.py\n",
-    "obj.model.Run(dataset, train_size = 0.66, random_state = 42, n_estimators = 1000)"
+    "obj.model.Run(dataset, train_size = 0.66, random_state = 42,\n",
+    "              n_estimators = 500, max_depth = 20)"
    ]
   },
   {
@@ -132,65 +136,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "z real: 2.770\t\tz predicted: 2.908\n",
-      "z real: 0.360\t\tz predicted: 0.361\n",
-      "z real: 0.360\t\tz predicted: 0.363\n",
-      "z real: 0.540\t\tz predicted: 0.538\n",
-      "z real: 3.600\t\tz predicted: 3.692\n",
-      "z real: 2.770\t\tz predicted: 2.811\n",
-      "z real: 2.690\t\tz predicted: 2.689\n",
-      "z real: 0.760\t\tz predicted: 0.718\n",
-      "z real: 4.350\t\tz predicted: 3.907\n",
-      "z real: 3.000\t\tz predicted: 3.135\n",
-      "z real: 1.410\t\tz predicted: 1.417\n",
-      "z real: 2.030\t\tz predicted: 2.081\n",
-      "z real: 2.300\t\tz predicted: 2.296\n",
-      "z real: 1.020\t\tz predicted: 1.021\n",
-      "z real: 0.690\t\tz predicted: 0.703\n",
-      "z real: 1.330\t\tz predicted: 1.297\n",
-      "z real: 0.590\t\tz predicted: 0.532\n",
-      "z real: 0.690\t\tz predicted: 0.703\n",
-      "z real: 0.820\t\tz predicted: 0.824\n",
-      "z real: 1.320\t\tz predicted: 1.304\n",
-      "z real: 2.610\t\tz predicted: 2.524\n",
-      "z real: 2.400\t\tz predicted: 2.457\n",
-      "z real: 2.900\t\tz predicted: 2.954\n",
-      "z real: 0.890\t\tz predicted: 0.889\n",
-      "z real: 1.030\t\tz predicted: 1.034\n",
-      "z real: 1.720\t\tz predicted: 1.771\n",
-      "z real: 2.490\t\tz predicted: 2.470\n",
-      "z real: 1.610\t\tz predicted: 1.599\n",
-      "z real: 0.110\t\tz predicted: 0.180\n",
-      "z real: 2.200\t\tz predicted: 2.178\n",
-      "z real: 1.000\t\tz predicted: 0.964\n",
-      "z real: 2.040\t\tz predicted: 2.074\n",
-      "z real: 1.640\t\tz predicted: 1.610\n",
-      "z real: 0.850\t\tz predicted: 0.854\n",
-      "z real: 1.260\t\tz predicted: 1.272\n",
-      "z real: 5.000\t\tz predicted: 4.017\n",
-      "z real: 0.920\t\tz predicted: 0.925\n",
-      "z real: 0.610\t\tz predicted: 0.613\n",
-      "z real: 1.310\t\tz predicted: 1.292\n",
-      "z real: 0.810\t\tz predicted: 0.828\n",
-      "z real: 1.240\t\tz predicted: 1.256\n",
-      "z real: 0.900\t\tz predicted: 0.900\n",
-      "z real: 1.710\t\tz predicted: 1.744\n",
-      "z real: 1.480\t\tz predicted: 1.486\n",
-      "z real: 4.500\t\tz predicted: 3.938\n",
-      "z real: 1.800\t\tz predicted: 1.773\n",
-      "z real: 3.290\t\tz predicted: 3.554\n",
-      "z real: 0.810\t\tz predicted: 0.819\n",
-      "z real: 2.100\t\tz predicted: 2.088\n",
-      "z real: 2.200\t\tz predicted: 2.178\n",
-      "z real: 0.800\t\tz predicted: 0.823\n",
-      "The test score is : 0.974 while the train score is: 0.997\n"
+      "z test: 2.770\t\tz predicted: 2.888\n",
+      "z test: 0.360\t\tz predicted: 0.362\n",
+      "z test: 0.360\t\tz predicted: 0.364\n",
+      "z test: 0.540\t\tz predicted: 0.536\n",
+      "z test: 3.600\t\tz predicted: 3.750\n",
+      "z test: 2.770\t\tz predicted: 2.825\n",
+      "z test: 2.690\t\tz predicted: 2.695\n",
+      "z test: 0.760\t\tz predicted: 0.717\n",
+      "z test: 4.350\t\tz predicted: 3.937\n",
+      "z test: 3.000\t\tz predicted: 3.131\n",
+      "z test: 1.410\t\tz predicted: 1.422\n",
+      "z test: 2.030\t\tz predicted: 2.075\n",
+      "z test: 2.300\t\tz predicted: 2.298\n",
+      "z test: 1.020\t\tz predicted: 1.021\n",
+      "z test: 0.690\t\tz predicted: 0.703\n",
+      "z test: 1.330\t\tz predicted: 1.297\n",
+      "z test: 0.590\t\tz predicted: 0.529\n",
+      "z test: 0.690\t\tz predicted: 0.703\n",
+      "z test: 0.820\t\tz predicted: 0.822\n",
+      "z test: 1.320\t\tz predicted: 1.304\n",
+      "z test: 2.610\t\tz predicted: 2.530\n",
+      "z test: 2.400\t\tz predicted: 2.461\n",
+      "z test: 2.900\t\tz predicted: 2.946\n",
+      "z test: 0.890\t\tz predicted: 0.887\n",
+      "z test: 1.030\t\tz predicted: 1.036\n",
+      "z test: 1.720\t\tz predicted: 1.765\n",
+      "z test: 2.490\t\tz predicted: 2.469\n",
+      "z test: 1.610\t\tz predicted: 1.596\n",
+      "z test: 0.110\t\tz predicted: 0.186\n",
+      "z test: 2.200\t\tz predicted: 2.169\n",
+      "z test: 1.000\t\tz predicted: 0.964\n",
+      "z test: 2.040\t\tz predicted: 2.074\n",
+      "z test: 1.640\t\tz predicted: 1.608\n",
+      "z test: 0.850\t\tz predicted: 0.851\n",
+      "z test: 1.260\t\tz predicted: 1.272\n",
+      "z test: 5.000\t\tz predicted: 4.025\n",
+      "z test: 0.920\t\tz predicted: 0.926\n",
+      "z test: 0.610\t\tz predicted: 0.619\n",
+      "z test: 1.310\t\tz predicted: 1.290\n",
+      "z test: 0.810\t\tz predicted: 0.825\n",
+      "z test: 1.240\t\tz predicted: 1.257\n",
+      "z test: 0.900\t\tz predicted: 0.899\n",
+      "z test: 1.710\t\tz predicted: 1.742\n",
+      "z test: 1.480\t\tz predicted: 1.483\n",
+      "z test: 4.500\t\tz predicted: 3.954\n",
+      "z test: 1.800\t\tz predicted: 1.779\n",
+      "z test: 3.290\t\tz predicted: 3.608\n",
+      "z test: 0.810\t\tz predicted: 0.817\n",
+      "z test: 2.100\t\tz predicted: 2.093\n",
+      "z test: 2.200\t\tz predicted: 2.175\n",
+      "z test: 0.800\t\tz predicted: 0.820\n",
+      "The test score is : 0.974 while the train score is: 0.998\n"
      ]
     }
    ],
@@ -200,7 +204,7 @@
     "train_score = obj.model.forest.score(obj.model.X_train, obj.model.y_train)\n",
     "\n",
     "for a, b in zip(obj.model.y_test, obj.model.y_pred):\n",
-    "    print('z real: {:1.3f}\\t\\tz predicted: {:1.3f}'.format(a[0], b))\n",
+    "    print('z test: {:1.3f}\\t\\tz predicted: {:1.3f}'.format(a, b))\n",
     "    \n",
     "print('The test score is : {:.3f} while the train score is: {:.3f}'.format(test_score, train_score))"
    ]
