--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,18 +27,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = my_class.spectral_data"
+    "df = my_class.spectral_data_II"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GRB050126\n",
+      "GRB050219A\n",
+      "GRB050219A\n",
+      "GRB050315\n",
+      "GRB050318\n",
+      "GRB050318\n",
+      "GRB050505\n",
+      "GRB050802\n",
+      "GRB050803\n",
+      "GRB050803\n",
+      "GRB050814\n",
+      "GRB050814\n",
+      "GRB050826\n",
+      "GRB050826\n",
+      "GRB051006\n",
+      "GRB051111\n",
+      "GRB060111A\n",
+      "GRB060111A\n",
+      "GRB060115\n",
+      "GRB060202\n",
+      "GRB060206\n",
+      "GRB060210\n",
+      "GRB060210\n",
+      "GRB060306\n",
+      "GRB060306\n",
+      "GRB060418\n",
+      "GRB060602A\n",
+      "GRB060602A\n",
+      "GRB060607A\n",
+      "GRB060707\n",
+      "GRB060708\n",
+      "GRB060714\n",
+      "GRB060904B\n",
+      "GRB060906\n",
+      "GRB060908\n",
+      "GRB060923A\n",
+      "GRB060927\n",
+      "GRB060927\n",
+      "GRB070318\n",
+      "GRB070318\n",
+      "GRB070411\n",
+      "GRB070419B\n",
+      "GRB070529\n",
+      "GRB070612A\n",
+      "GRB070721B\n",
+      "GRB071025\n",
+      "GRB080207\n",
+      "GRB080210\n",
+      "GRB080210\n",
+      "GRB080310\n",
+      "GRB080325\n",
+      "GRB080804\n",
+      "GRB080805\n",
+      "GRB080810\n",
+      "GRB080905B\n",
+      "GRB080905B\n",
+      "GRB080928\n",
+      "GRB081008\n",
+      "GRB081028A\n",
+      "GRB081109A\n",
+      "GRB081109A\n",
+      "GRB090418A\n",
+      "GRB090516A\n",
+      "GRB090530\n",
+      "GRB090530\n",
+      "GRB090726\n",
+      "GRB090926B\n",
+      "GRB100615A\n",
+      "GRB100615A\n",
+      "GRB101219B\n",
+      "GRB110106B\n",
+      "GRB110128A\n",
+      "GRB110205A\n",
+      "GRB110801A\n",
+      "GRB110818A\n",
+      "GRB110818A\n",
+      "GRB111107A\n",
+      "GRB111123A\n",
+      "GRB120118B\n",
+      "GRB120326A\n",
+      "GRB120326A\n",
+      "GRB120327A\n",
+      "GRB120404A\n",
+      "GRB120521C\n",
+      "GRB120712A\n",
+      "GRB120712A\n",
+      "GRB120802A\n",
+      "GRB120802A\n",
+      "GRB120811C\n",
+      "GRB120815A\n",
+      "GRB120907A\n",
+      "GRB120907A\n",
+      "GRB120909A\n",
+      "GRB120909A\n",
+      "GRB120922A\n",
+      "GRB120922A\n",
+      "GRB121201A\n",
+      "GRB130420A\n",
+      "GRB130420A\n",
+      "GRB130514A\n",
+      "GRB130604A\n",
+      "GRB130606A\n",
+      "GRB130606A\n",
+      "GRB130610A\n",
+      "GRB130612A\n",
+      "GRB131103A\n",
+      "GRB140114A\n",
+      "GRB140114A\n",
+      "GRB140304A\n",
+      "GRB140304A\n",
+      "GRB140430A\n",
+      "GRB140430A\n",
+      "GRB140509A\n",
+      "GRB140518A\n",
+      "GRB140518A\n",
+      "GRB140629A\n",
+      "GRB140629A\n",
+      "GRB140703A\n",
+      "GRB140703A\n",
+      "GRB140710A\n",
+      "GRB140710A\n",
+      "GRB141004A\n",
+      "GRB141109A\n",
+      "GRB141225A\n",
+      "GRB150301B\n",
+      "GRB150413A\n",
+      "GRB150413A\n",
+      "GRB150818A\n",
+      "GRB151111A\n",
+      "GRB151111A\n",
+      "GRB151112A\n",
+      "GRB160227A\n",
+      "GRB160227A\n",
+      "GRB161017A\n",
+      "GRB161108A\n",
+      "GRB170113A\n",
+      "GRB170113A\n",
+      "GRB170202A\n",
+      "GRB170604A\n",
+      "GRB170604A\n",
+      "GRB171222A\n",
+      "GRB180115A\n",
+      "GRB180205A\n",
+      "GRB180329B\n",
+      "GRB180329B\n",
+      "GRB180404A\n",
+      "GRB180624A\n",
+      "GRB181110A\n",
+      "GRB181110A\n"
+     ]
+    }
+   ],
    "source": [
     "# Splitting the dataset in i and p\n",
     "df_i = df[(df['SType'] == 'i')].reset_index(drop=True)\n",
@@ -56,20 +212,23 @@
     "# Using the mask to drop from \"i dataframe\" the row corresponding to GRBs that are not in \"p dataframe\"\n",
     "for index, c in enumerate(condictions):\n",
     "    if not c:\n",
-    "        df_i.drop(index, inplace=True)"
+    "        df_i.drop(index, inplace=True)\n",
+    "        \n",
+    "for i in df_i['ID']:\n",
+    "    print(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['GRB051109A', 'GRB080413A', 'GRB111008A']\n",
-      "['GRB111008A']\n"
+      "['GRB050126', 'GRB050219A', 'GRB050802', 'GRB050814', 'GRB050826', 'GRB051006', 'GRB051111', 'GRB060111A', 'GRB060202', 'GRB060206', 'GRB060210', 'GRB060306', 'GRB060418', 'GRB060602A', 'GRB060707', 'GRB060708', 'GRB060714', 'GRB060908', 'GRB060923A', 'GRB070411', 'GRB070419B', 'GRB070529', 'GRB070612A', 'GRB070721B', 'GRB071025', 'GRB080207', 'GRB080310', 'GRB080325', 'GRB080804', 'GRB080805', 'GRB080810', 'GRB080905B', 'GRB080928', 'GRB081008', 'GRB081028A', 'GRB081109A', 'GRB090418A', 'GRB090516A', 'GRB090726', 'GRB100615A', 'GRB101219B', 'GRB110128A', 'GRB110205A', 'GRB110801A', 'GRB110818A', 'GRB111107A', 'GRB111123A', 'GRB120404A', 'GRB120521C', 'GRB120712A', 'GRB120815A', 'GRB120907A', 'GRB121201A', 'GRB130514A', 'GRB130604A', 'GRB130610A', 'GRB130612A', 'GRB140703A', 'GRB140710A', 'GRB141004A', 'GRB141109A', 'GRB141225A', 'GRB150413A', 'GRB150818A', 'GRB151111A', 'GRB151112A', 'GRB161017A', 'GRB161108A', 'GRB170113A', 'GRB170202A', 'GRB170604A', 'GRB171222A', 'GRB180115A', 'GRB180205A', 'GRB180329B', 'GRB180404A', 'GRB180624A']\n",
+      "['GRB050126', 'GRB050315', 'GRB050505', 'GRB050802', 'GRB051006', 'GRB051111', 'GRB060115', 'GRB060202', 'GRB060206', 'GRB060418', 'GRB060607A', 'GRB060707', 'GRB060708', 'GRB060714', 'GRB060904B', 'GRB060906', 'GRB060908', 'GRB060923A', 'GRB070411', 'GRB070419B', 'GRB070529', 'GRB070612A', 'GRB070721B', 'GRB071025', 'GRB080207', 'GRB080310', 'GRB080325', 'GRB080804', 'GRB080805', 'GRB080810', 'GRB080928', 'GRB081008', 'GRB081028A', 'GRB090418A', 'GRB090516A', 'GRB090726', 'GRB090926B', 'GRB101219B', 'GRB110106B', 'GRB110128A', 'GRB110205A', 'GRB110801A', 'GRB111107A', 'GRB111123A', 'GRB120118B', 'GRB120327A', 'GRB120404A', 'GRB120521C', 'GRB120811C', 'GRB120815A', 'GRB121201A', 'GRB130514A', 'GRB130604A', 'GRB130610A', 'GRB130612A', 'GRB131103A', 'GRB140509A', 'GRB141004A', 'GRB141109A', 'GRB141225A', 'GRB150301B', 'GRB150818A', 'GRB151112A', 'GRB161017A', 'GRB161108A', 'GRB170202A', 'GRB171222A', 'GRB180115A', 'GRB180205A', 'GRB180404A', 'GRB180624A']\n"
      ]
     }
    ],
@@ -83,10 +242,11 @@
     "# Creating two list to see wich GRBs that are in i or p dataset are not in the filtered dataset with Band fit\n",
     "p_list = []\n",
     "i_list = []\n",
-    "for p, i in zip(df_p['ID'], df_i['ID']):\n",
+    "for p in df_p['ID']:\n",
     "    if not p in df_p_Band['ID'].values:\n",
     "        p_list.append(p)\n",
     "    \n",
+    "for i in df_i['ID']:\n",
     "    if not i in df_i_Band['ID'].values:\n",
     "        i_list.append(i)\n",
     "    \n",
