--- a/temp.ipynb
+++ b/temp.ipynb
@@ -162,6 +162,92 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import numpy as np\n",
+    "from sklearn.metrics import mean_absolute_percentage_error\n",
+    "from scipy import stats\n",
+    "from ML_GRB import ML_GRB, RND_FOREST\n",
+    "\n",
+    "GRB = ML_GRB()\n",
+    "GRB.DataReading('')\n",
+    "GRB.DatasetExtrapolation()\n",
+    "\n",
+    "dataset = GRB.dataset\n",
+    "\n",
+    "model = RND_FOREST()\n",
+    "GRB.SetModel(model)     # Setting the model in the main class\n",
+    "\n",
+    "keys = []\n",
+    "for i in dataset['z']:\n",
+    "    if (i <= 5):\n",
+    "        keys.append(0)\n",
+    "        \n",
+    "    elif (i > 5):\n",
+    "        keys.append(1)\n",
+    "        \n",
+    "keys_arr = np.array(keys)\n",
+    "\n",
+    "dataset['z'] = np.log10(1 + dataset['z'])\n",
+    "dataset[['DeltaT', 'Ep_i', 'F_i', 'Ep_p', 'F_p']] = np.log10(dataset[['DeltaT', 'Ep_i', 'F_i', 'Ep_p', 'F_p']])  \n",
+    "\n",
+    "# Fitting the model ---> see functions.py\n",
+    "GRB.model.Run(dataset, train_size = 0.8, stratify=keys_arr, \n",
+    "              n_estimators = 500, max_depth = 13)\n",
+    "\n",
+    "y_train_pred = GRB.model.forest.predict(GRB.model.X_train)\n",
+    "\n",
+    "z_train_list = []\n",
+    "z_train_pred_list = []\n",
+    "z_test_list = []\n",
+    "z_pred_list = []\n",
+    "for test, pred, train, train_pred in zip(GRB.model.y_test, GRB.model.y_pred, GRB.model.y_train, y_train_pred):\n",
+    "       z_test = 10**test - 1\n",
+    "       z_pred = 10**pred - 1\n",
+    "       z_train = 10**train - 1\n",
+    "       z_train_pred = 10**train_pred - 1\n",
+    "       z_test_list.append(z_test)\n",
+    "       z_pred_list.append(z_pred)\n",
+    "       z_train_list.append(z_train)\n",
+    "       z_train_pred_list.append(z_train_pred)\n",
+    "\n",
+    "# Computing the results\n",
+    "correlation_coefficient, p_value = stats.pearsonr(z_test_list, z_pred_list)\n",
+    "mape = mean_absolute_percentage_error(z_test_list, z_pred_list)\n",
+    "\n",
+    "# Plotting predictions vs test data\n",
+    "fig, ax = plt.subplots(1,2)\n",
+    "ax[0].set(title = 'Test Results', \n",
+    "       xlabel = 'z observed', \n",
+    "       ylabel = 'z predicted')\n",
+    "ax[1].set(title = 'Train Results', \n",
+    "       xlabel = 'z observed', \n",
+    "       ylabel = 'z predicted')\n",
+    "\n",
+    "ax[0].scatter(z_test_list, z_pred_list, color='k', marker='.', label='model results')\n",
+    "ax[1].scatter(z_train_list, z_train_pred_list, color='k', marker='.', label='model results')\n",
+    "\n",
+    "# Plotting a bisector that act as an ideal model\n",
+    "x_values1 = np.linspace(0, max(z_test_list), 100)\n",
+    "x_values2 = np.linspace(0, max(z_train_list), 100)\n",
+    "ax[0].plot(x_values1, x_values1, color='0.6', linestyle = '--', label='ideal model')\n",
+    "ax[1].plot(x_values2, x_values2, color='0.6', linestyle = '--', label='ideal model')\n",
+    "\n",
+    "\n",
+    "ax[0].legend(loc='best')\n",
+    "ax[1].legend(loc='best')\n",
+    "plt.show()\n",
+    "    \n",
+    "# Printing the results\n",
+    "print('The correlation r is : {:.5f} and the p-value is {:.5f} while the MAPE is: {:.5f}'.format(correlation_coefficient, p_value, mape))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
